[package]
name = "libatk-rs"
version = "0.1.0"
edition = "2021"
description = "Rust library that implements the Atk devices protocol."
homepage = "https://github.com/cyberphantom52/libatk-rs/"
repository = "https://github.com/cyberphantom52/libatk-rs/"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
atk-command-derive = { git = "https://github.com/cyberphantom52/atk-command-derive.git" }
hidapi = { version = "2.6.3", default-features = false, features = [
    "linux-shared-hidraw",
] }
